--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+selinux (1:0.11pexip2) pexip; urgency=low
+
+  * Make update-selinux-policy tolerate the lack of installed policy.
+    Fixes installations which disable the installation of recommended
+    packages.
+
+ -- John-Mark Bell <jmb@pexip.com>  Fri, 10 Jan 2014 13:05:22 +0000
+
 selinux (1:0.11pexip1) pexip; urgency=low
 
   * Prepare Pexip packaging
